--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,6 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\ALFREDO CACONDA\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\Alfredo Caconda\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
